--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
+    "@types/react": "^18.2.24",
+    "@types/react-dom": "^18.2.8",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "babel-jest": "^29.2.1",
