--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "no-use-before-define": ["error", { "variables": false }],
-    "react/prop-types": ["error", { "ignore": ["navigation", "navigation.navigate"] }]
+    "react/prop-types": ["error", { "ignore": ["navigation", "navigation.navigate"] }],
+    "linebreak-style": 0
   }
 }
