--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "react": "18.2.0",
@@ -18,6 +19,7 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-pager-view": "^6.2.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0"
