--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "1.8.0",
     "react-native-pager-view": "^6.2.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
