--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.3.1",
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/netinfo": "^9.4.1",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/material-top-tabs": "^6.6.4",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
+    "amazon-cognito-identity-js": "^6.3.6",
+    "aws-amplify": "^5.3.11",
+    "aws-amplify-react-native": "^7.0.7",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-dotenv": "^3.4.9",
