--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^5.3.1",
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-community/netinfo": "^9.4.1",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
@@ -23,10 +24,13 @@
     "aws-amplify-react-native": "^7.0.7",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-datepicker": "^1.7.2",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-localize": "^3.0.3",
     "react-native-maps": "1.8.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-pager-view": "^6.2.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
